--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-en/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-en/strings.xml
@@ -124,4 +124,6 @@
     <string name="default_tag_title_work">Work</string>
     <string name="change_tag_color_picker_title">Pick color</string>
     <string name="menu_show_changelog">Show changelog</string>
+    <string name="pref_list_overview_instead_cards_summary">Display all lists inside a list view instead of a grid of cards</string>
+    <string name="pref_list_overview_instead_cards_title">List overview as list instead of cards</string>
 </resources>
