--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
@@ -135,5 +135,7 @@
     <string name="change_tag_color_picker_title">Pick color</string>
     <string name="menu_show_changelog">Show changelog</string>
     <string name="changelog_webpage" translatable="false">https://gitlab.com/gladion136/opensyncedlists/-/blob/main/CHANGELOG.md</string>
+    <string name="pref_list_overview_instead_cards_summary">Display all lists inside a list view instead of a grid of cards</string>
+    <string name="pref_list_overview_instead_cards_title">List overview as list instead of cards</string>
 
 </resources>
